[tool.poetry]
name = "lesson-19"
version = "0.1.0"
description = ""
authors = ["chevchelios <keks1001@mail.ru>"]
readme = "README.md"
packages = [{include = "lesson_19"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.2"
pytest-voluptuous = "^1.2.0"
selene = "2.0.0b16"
python-dotenv = "^1.0.0"
allure-pytest = "^2.13.0"
requests = "^2.28.2"
curlify = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
